[tool.poetry]
name = "subaudit"
version = "0.1.0"
description = "Subscribe and unsubscribe for specific audit events"
authors = ["Eliah Kagan <degeneracypressure@gmail.com>"]
license = "0BSD"
readme = "README.md"
homepage = "https://github.com/EliahKagan/subaudit"
repository = "https://github.com/EliahKagan/subaudit"
keywords = ["audit", "auditing", "events", "subscribe", "unsubscribe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
sysaudit = { version = "^0.3.0", python = "~3.7" }

[tool.poetry.group.test.dependencies]
attrs = [
    { version = "~24.2.0", python = "~3.7" },
    { version = "^25.3.0", python = "^3.8" },
]
mock = "^5.2.0"
pytest = [
    { version = "^7.4.4", python = "~3.7" },
    { version = "^8.3.5", python = "^3.8" },
]
pytest-check = [
    { version = "~2.3.1", python = "~3.7" },
    { version = "~2.4.2", python = "~3.8" },
    { version = "^2.5.3", python = "^3.9" },
]
pytest-mock = [
    { version = "^3.11.1", python = "~3.7" },
    { version = "^3.14.1", python = "^3.8" },
]
pytest-subtests = [
    { version = "^0.13.1", python = ">=3.7,<3.9" },
    { version = "^0.14.1", python = "^3.9" },
]
python-clock-timer = "^0.4.0"
types-mock = [
    { version = "==5.1.0.3", python = "~3.7" },
    { version = "==5.1.0.20240425", python = "~3.8" },
    { version = "^5.2.0.20250516", python = "^3.9" },
]
typing-extensions = [
    { version = "~4.7.1", python = "~3.7" },
    { version = "~4.13.2", python = "~3.8" },
    { version = "^4.14.0", python = "^3.9" },
]

[tool.poetry.group.analyze.dependencies]
flake8 = [
    { version = "~7.1.2", python = "~3.8.1" },
    { version = "^7.2.0", python = "^3.9" },
]
isort = [
    { version = "~5.11.5", python = "~3.7" },
    { version = "^5.13.2", python = "~3.8" },
    { version = "^6.0.1", python = "^3.9" },
]
mypy = [
    { version = "~1.4.1", python = "~3.7" },
    { version = "~1.14.1", python = "~3.8" },
    { version = "^1.16.0", python = "^3.9" },
]
pylint = [
    { version = "^2.17.7", python = "~3.7.2" },
    { version = "~3.2.7", python = "~3.8" },
    { version = "^3.3.7", python = "^3.9" },
]
pyright = "^1.1.401"

[tool.poetry.group.notebook.dependencies]
ipykernel = { version = "^7.0.0", python = "^3.8" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "clock_timer"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_check.context_manager"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_subtests"
ignore_missing_imports = true

[tool.pylint.main]
disable = ["too-few-public-methods"]

[tool.pytest.ini_options]
markers = [
    "slow: mark a test as slow.",
    "implementation_detail: mark a test as making a claim known to be likely to change.",
]
mock_use_standalone_module = true
